// Vitest Snapshot v1

exports[`Link component > can be nested within Text and Heading 1`] = `
<div>
  <p
    class="c-fIXJvv c-fIXJvv-gvmVBy-size-md"
  >
    <button
      class="c-kgcOue c-kgcOue-gvmVBy-size-md"
    >
      TEXT LINK
    </button>
  </p>
  <h2
    class="c-iSnHBU c-iSnHBU-fOoUdm-size-md"
  >
    <button
      class="c-kgcOue c-kgcOue-gvmVBy-size-md"
    >
      HEADING LINK
    </button>
  </h2>
</div>
`;

exports[`Link component > renders an anchor 1`] = `
<div>
  <a
    class="c-kgcOue c-kgcOue-gvmVBy-size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component > renders an large anchor 1`] = `
<div>
  <a
    class="c-kgcOue c-kgcOue-jvTRJO-size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
